compiler/testData/diagnostics/tests/extensions/contextReceivers/thisIdentifierInfo.fir.kt
class A(val a: String?)

context(A) fun f() {
    if (<!UNRESOLVED_LABEL!>this@A<!>.<!UNRESOLVED_REFERENCE!>a<!> == null) return
    <!UNRESOLVED_LABEL!>this@A<!>.<!UNRESOLVED_REFERENCE!>a<!>.<!UNRESOLVED_REFERENCE!>length<!>
}